#204: Bugfix: remove scrollbars for IE11

--- a/front-end/app/styles/_dialog.scss
+++ b/front-end/app/styles/_dialog.scss
@@ -9,6 +9,7 @@ md-dialog md-dialog-actions {
 md-dialog.login-dialog {
   max-height: 100%;
   min-width: 18rem;
+  overflow: hidden;
 
   md-divider {
     margin: 1.5rem 0;
